<?xml version="1.0"?>
<package>
  <name>ros_mia_rqt_plugin</name>
  <version>0.0.0</version>
  <description>The rqt_plugin for ros mia</description>
  <maintainer email="Kerim_Yener.Yurtdas@dfki.de">Kerim</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_mia_driver_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ros_mia_driver_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
